# multidoc-parser

./: .gitignore  AGENTS.md  Taskfile.yml  package-lock.json  package.json  pyproject.toml
.craft/: about.json  description.txt  meta.toml  python.json  version.ini
.husky/: pre-commit
context/: scope.wdl
docs/: buildin-guidance-mentor.ipynb  government_docs_parse.ipynb  government_docs_parse.py  slopy-large-sizing-docs-optimization.ipynb
services/firefox-container/: compose.yaml
src/multidoc_parser/: __init__.py
