[project]
name = "multidoc-parser"
version = "0.1.0"
description = "part of omnilibris project"
readme = "README.md"
authors = [
    { name = "Sett Sarverott A.A.B.", email = "sarverott@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "crewai>=0.193.2",
    "docker>=7.1.0",
    "fastapi>=0.124.0",
    "geckodriver>=0.0.1",
    "gitpython>=3.1.45",
    "httpx>=0.28.1",
    "langfuse>=3.10.5",
    "marimo>=0.18.3",
    "marionette-driver>=3.4.0",
    "markdownify>=1.2.2",
    "marko>=2.2.1",
    "mcp[cli]>=1.23.1",
    "miniwdl>=1.13.1",
    "mistletoe>=1.5.0",
    "ollama>=0.6.1",
    "openai>=2.6.1",
    "pdf2docx>=0.5.8",
    "pdfkit>=1.0.0",
    "playwright>=1.56.0",
    "plutoprint>=0.14.0",
    "podman>=5.6.0",
    "pydantic>=2.12.5",
    "pygithub>=2.8.1",
    "pypandoc>=1.16.2",
    "pypandoc-binary>=1.16.2",
    "pytoml>=0.1.21",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "selenium>=4.39.0",
    "sglang>=0.5.6",
]

[build-system]
requires = ["poetry-core>=2,<3"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "notebook>=7.5.0",
]
